# OpenCNPJ

./: PYTHON_CONVERSION.md  README.md
ETL_Python/: .gitignore  CONVERSION_SUMMARY.md  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
ETL_Python/commands/: __init__.py  pipeline_command.py  single_command.py  test_command.py  zip_command.py
ETL_Python/downloaders/: __init__.py  web_downloader.py
ETL_Python/exporters/: __init__.py  rclone_client.py
ETL_Python/processors/: __init__.py  integrity_tester.py  ndjson_processor.py  parquet_ingestor.py
ETL_Python/tests/: test_cnpj_utils.py  test_config.py  test_json_cleanup_utils.py
ETL_Python/utils/: cnpj_utils.py  hash_cache_manager.py  json_cleanup_utils.py
